making footer fixes, fixing css, adding image, making school construction page dark mode

--- a/style.css
+++ b/style.css
@@ -283,6 +283,11 @@ a:hover{
   margin-bottom: 5%;
 }
 
+/* .robot-description img {
+  width: 80%;
+  height: 80%;
+} */
+
 .robot-description-text {
   margin-top: 1%;
   margin-left: 5%;
